updated my team member page on my add-AllieCole branch

--- a/about.html
+++ b/about.html
@@ -266,9 +266,11 @@ $(document).ready(function () {
 
 <div id="team-members" class="section level3">
 <h3>Team Members</h3>
-<p>Clarissa Boyajian (<a href="mailto:cboyajian@bren.ucsb.edu" class="email">cboyajian@bren.ucsb.edu</a>) Clarissa is a certified arborist with experience using urban forestry tree canopy coverage in project and grant management.</p>
-<p>Allie Cole (<a href="mailto:icole@bren.ucsb.edu" class="email">icole@bren.ucsb.edu</a>) Allie has spent a large amount of time working in and around mangrove ecosystems, and has a degree in marine science. She is currently working with Spatial Analysis tools at UCSB.</p>
-<p>Scout Leonard (<a href="mailto:scout@bren.ucsb.edu" class="email">scout@bren.ucsb.edu</a>) Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.</p>
+<ul>
+<li><p>Clarissa Boyajian (<a href="mailto:cboyajian@bren.ucsb.edu" class="email">cboyajian@bren.ucsb.edu</a>) Clarissa is a certified arborist with experience using urban forestry tree canopy coverage in project and grant management.</p></li>
+<li><p><a href="https://github.com/AllieCole">Allie Cole</a> Allie has spent a large amount of time working in and around mangrove ecosystems, and has a degree in marine science. She is currently working with Spatial Analysis tools at UCSB. <a href="mailto:icole@bren.ucsb.edu" class="email">icole@bren.ucsb.edu</a></p></li>
+<li><p>Scout Leonard (<a href="mailto:scout@bren.ucsb.edu" class="email">scout@bren.ucsb.edu</a>) Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.</p></li>
+</ul>
 </div>
 
 
