added photos and expanded the contents of our about and index pages

--- a/about.html
+++ b/about.html
@@ -272,6 +272,11 @@ $(document).ready(function () {
 <li><p><a href="https://github.com/scoutcleonard">Scout Leonard</a> Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.</p></li>
 </ul>
 </div>
+<div id="mangrove-canopy-cover" class="section level3">
+<h3>Mangrove Canopy Cover</h3>
+<p><img src="images/mangrove_image.jpg" /> Our team’s project calculates 3 canopy coverage indices for the Cacheu Park Mangrove Forest in Guinea-Bissau using Landsat 8 data from before and after mangrove restoration efforts were implemented.</p>
+<p>The repository for this analysis and the materials we used to create our indices and teach them to our cohort can be found in our <a href="https://github.com/mc-cover/Gee_Whiz_Final_Project">final project repository.</a></p>
+</div>
 
 
 
