--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Clarissa Boyajian" />
 
-<meta name="date" content="2021-11-10" />
 
-<title>Welcome</title>
+<title>mc-cover’s Mangrove Canopy Coverage at Cacheu Park Mangrove Forest</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -261,14 +259,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome</h1>
-<h4 class="author">Clarissa Boyajian</h4>
-<h4 class="date">11/10/2021</h4>
+<h1 class="title toc-ignore">mc-cover’s Mangrove Canopy Coverage at Cacheu Park Mangrove Forest</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
+<p>Welcome to our group project website!</p>
+<p>To learn more about our spatial analysis project and team, please visit the <a href="https://mc-cover.github.io/about.html">“About” page.</a></p>
+<p><img src="images/mangroves.jpg" /></p>
 
 
 
