added workflow page w image

--- a/team-workflow.html
+++ b/team-workflow.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>team workflow</title>
 
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -262,27 +262,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">team workflow</h1>
 
 </div>
 
 
-<div id="team-members" class="section level3">
-<h3>Team Members</h3>
-<ul>
-<li><p><a href="https://github.com/cboyajian">Clarissa Boyajian</a> Clarissa is a certified arborist with experience using urban forestry tree canopy coverage in project and grant management.</p></li>
-<li><p><a href="https://github.com/AllieCole">Allie Cole</a> Allie has spent a large amount of time working in and around mangrove ecosystems, and has a degree in marine science. She is currently working with Spatial Analysis tools at UCSB. <a href="mailto:icole@bren.ucsb.edu" class="email">icole@bren.ucsb.edu</a></p></li>
-<li><p><a href="https://github.com/scoutcleonard">Scout Leonard</a> Scout has completed coursework in Plant Systematics and Plant Biology. She is currently learning Spatial Analysis at UCSB.</p></li>
-</ul>
-</div>
-<div id="mangrove-canopy-cover-project" class="section level3">
-<h3>Mangrove Canopy Cover Project</h3>
-<p><img src="images/mangrove_image.jpg" /> Our team’s project calculates 3 canopy coverage indices for the Cacheu Park Mangrove Forest in Guinea-Bissau using Landsat 8 data from before and after mangrove restoration efforts were implemented.</p>
-<div id="project-repository" class="section level4">
-<h4>Project Repository</h4>
-<p>The repository for this analysis and the materials we used to create our indices and teach them to our cohort can be found in our <a href="https://github.com/mc-cover/Gee_Whiz_Final_Project">final project repository.</a></p>
-</div>
-</div>
+<p><img src="images/mc-cover%20Roadmap%202021-11-22.svg" /></p>
 
 
 
